# spooky-c

./: INSTALL  Makefile  Makefile.am  README  README.md  configure.ac  spooky-c.c  spooky-c.h  spooky.cpp  spooky.h  spooky_hash128.3  spooky_hash128.pod  test.c  testspooky-c.c  testspooky.cpp
