#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([spooky-c], [1.0.0], [https://github.com/andikleen/spooky-c])
AM_INIT_AUTOMAKE([foreign])

AC_CONFIG_SRCDIR([spooky-c.h])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([m4])

# Checks for programs.
AC_PROG_CC
AC_USE_SYSTEM_EXTENSIONS
LT_INIT

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
